2013-01-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c: Include <w2c/config.h> first for large file support.

2013-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* wprob.test: Avoid spurious failure of parallel-tests.
	* am/pdftex.am: Renamed wprob.{tex,log} => pwprob.{tex,log}.

2013-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* macnames.c, pdftex-common.h, pdftoepdf.cc, ttf2afm.c,
	writet1.c: Change 'const char notdef[]' -> 'char notdef[]' and
	remove casts (const char *) -> (char *).

	* mapfile.c (dummy_fm_entry): Delare const_fm_entry as non-const
	and remove the cast.

	* utils.c (writestreamlength): Cast length for printing.

2012-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/pdftex.am (pdftex_version.h): Enable silent rules.

2012-11-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.web: Change program name into PDFTEX (not ETEX).
	* pdftex.ch: Remove the contents of ../tex-binpool.ch.
	* am/pdftex.am (pdftex_ch_srcs): Add tex-binpool.ch.

2012-10-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftoepdf.cc: In MSVC 5.0 getNewObjectNumber() requires an int
	return value.

2012-10-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftoepdf.cc: #include <w2c/config.h> early to avoid problems
	with the definition of boolean in <rpcndr.h> for MINGW32.

2012-10-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	The openbsd compat library is no longer used.
	* pdftoepdf.cc, ptexlib.h, utils.c:
	Drop #include "openbsd-compat.h".
	* am/pdftex.am, am/pdftosrc.am: Remove OBSDCOMPAT_*.

2012-10-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid (most) MinGW compiler warnings from regex code.
	* regcomp.c, regexec.c: ANSI C function definitions.
	* regcomp.c (init_dfa): Declare codeset_name as const.
	* regex_internal.c (re_string_reconstruct, re_dfa_add_node):
	Avoid unused variables (for !RE_ENABLE_I18N).
	* regexec.c (regexec, re_search_stub, prune_impossible_nodes):
	Avoid unused variables (for !_LIBC or !RE_ENABLE_I18N).