@@ -1,0 +1,1 @@
+#define ETEX_VERSION "2.5"
