@@ -23,7 +23,7 @@ with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
 #include <pdftexdir/pdftex_version.h> /* for PDFTEX_VERSION */
-#include <etexdir/etex_version.h> /* for ETEX_VERSION */
+#include <pdftexdir/etex_version.h> /* for ETEX_VERSION */
 
 #define BANNER "This is pdfTeX, Version 3.1415926-" ETEX_VERSION "-" PDFTEX_VERSION
 #define COPYRIGHT_HOLDER "Peter Breitenlohner (eTeX)/Han The Thanh (pdfTeX)"
