@@ -57,13 +57,14 @@ xetex_CXXFLAGS = # $(WARNING_CXXFLAGS)
 xetex_LDADD = $(xetex_ldadd) $(LDADD) $(ipc_socketlibs)
 
 # We must create libxetex.a etc before building the xetex_OBJECTS
-xetex_prereq = $(libxetex) etexdir/etex_version.h xetexdir/xetex_version.h
+xetex_prereq = $(libxetex) xetexdir/etex_version.h xetexdir/xetex_version.h
 $(xetex_OBJECTS): $(xetex_prereq)
 
 ## XeTeX C sources
 xetex_c_h = xetexini.c xetex0.c xetexcoerce.h xetexd.h
 nodist_xetex_SOURCES = $(xetex_c_h) xetex-pool.c
-dist_xetex_SOURCES = xetexdir/xetexextra.c xetexdir/xetexextra.h xetexdir/xetex_version.h
+dist_xetex_SOURCES = xetexdir/xetexextra.c xetexdir/xetexextra.h \
+	xetexdir/etex_version.h xetexdir/xetex_version.h
 
 $(xetex_c_h): xetex-web2c
 	@$(web2c) xetex
@@ -79,8 +80,14 @@ xetex.p xetex.pool: xetex-tangle
 xetex-tangle: otangle$(EXEEXT) xetexdir/xetex.web xetex.ch tangle-sh
 	@$(xe_tangle) xetex xetex
 
+# Extract etex version
+xetexdir/etex_version.h: xetexdir/xetex.web
+	$(AM_V_at)$(MKDIR_P) xetexdir
+	$(AM_V_GEN)grep '^@d eTeX_version_string==' $(srcdir)/xetexdir/xetex.web \
+	  | sed "s/^.*'-/#define ETEX_VERSION \"/;s/'.*$$/\"/" >$@
+
 ## Extract xetex version
-xetexdir/xetex_version.h: xetexdir/xetex.ch
+xetexdir/xetex_version.h: xetexdir/xetex.web
 	$(AM_V_at)$(MKDIR_P) xetexdir
 	$(AM_V_GEN)grep '^@d XeTeX_version_string==' $(srcdir)/xetexdir/xetex.web \
 	  | sed "s/^.*'-/#define XETEX_VERSION \"/;s/'.*$$/\"/" >$@
